2003-08-30  Filip Navara  <xnavara@volny.cz>

	* tools/cabman/cabinet.cxx (CCabinet::ConvertPath): NULL-terminate
	newpath.

2003-08-30  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/rmkdir.c: Fix for absolute paths.

2003-08-30  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/rmkdir.c: Create all (sub)directories in path on win32.

2003-08-30  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* bootdata/packages/reactos.dff: Don't include winmm.dll in reactos.cab.

2003-08-29  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile: Copy freeloader files to bootable CD.

2003-08-28  Martin Fuchs	<martin-fuchs@gmx.net>

	* subsys/system/explorer/taskbar/startmenu.cpp,
	subsys/system/explorer/shell/shellbrowser.cpp:
	Implemented control panel window in cabinet view mode.

2003-08-24  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile: Support creating compressed bootable CDs.
	* rules.mak (HOST_CXX, HOST_AR, CABMAN): Define.
	* bootdata/txtsetup.sif: Add Cabinets section.
	Remove files that are put in reactos.cab.
	* subsys/system/usetup/filequeue.c (SetupCloseFileQueue): Release
	memory allocated for SourceCabinet.
	(SetupQueueCopy): Support copying files in cabinets.
	(SetupCommitFileQueue): Support copying files in cabinets.
	* subsys/system/usetup/filequeue.h (SetupQueueCopy): Add SourceCabinet
	parameter.
	* subsys/system/usetup/filesup.c (SetupExtractFile): New function.
	* subsys/system/usetup/filesup.h (SetupExtractFile): Prototype.
	* subsys/system/usetup/infcache.c (InfOpenBufferedFile): New function.
	* subsys/system/usetup/infcache.h (InfOpenBufferedFile): Prototype.
	* subsys/system/usetup/makefile (TARGET_SDKLIBS): Add zlib.a.
	(TARGET_CFLAGS): Add zlib to include path.
	(TARGET_OBJECTS): Add cabinet.o.
	* subsys/system/usetup/usetup.c (PrepareCopyPageInfFile): New function.
	(PrepareCopyPage): Process Cabinets section.
	* tools/helper.mk: Support C++ applications.
	* rosbin.txt: Remove.